Correction bouton contact

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -87,7 +87,7 @@
                     <br>
                     Nocturne jusqu'a 23h le 1<sup>er</sup> mardi du mois
                 </p>
-                <a href="../HTML/contact.html" id = 'boutonInfo'> Nous contacter </a> 
+                <a href="../HTML/contact.html" id = 'boutonInfo' class="bouton"> Nous contacter </a> 
             </section>
             <section id = "footerDeuxiemePartie">
                 <ul>
